--- a/BankID.WebDemo/Views/Home/About.cshtml
+++ b/BankID.WebDemo/Views/Home/About.cshtml
@@ -2,5 +2,5 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title</h2>
-<p>A MVC Web Application demo of BankID.</p>
+<p>A web application demo of BankID.</p>
 <p>Created by Mikael Karlgren. Source available at <a>https://github.com/kocken/bankid-implementation</a>.</p>
